@@ -1231,6 +1231,15 @@ void aptitudeDepCache::internal_mark_delete(const PkgIterator &Pkg,
 					    bool Purge,
 					    bool unused_delete)
 {
+  std::vector<unsigned int> unused_already_visited;
+  internal_mark_delete(Pkg, Purge, unused_delete, unused_already_visited);
+}
+
+void aptitudeDepCache::internal_mark_delete(const PkgIterator &Pkg,
+					    bool Purge,
+					    bool unused_delete,
+					    std::vector<unsigned int>& unused_already_visited)
+{
   // honour ::Purge-Unused in the main entry point for removing packages, it
   // should catch cases of automatically installed and unused packages not
   // purged (#724034 and others)
@@ -1274,6 +1283,21 @@ void aptitudeDepCache::internal_mark_delete(const PkgIterator &Pkg,
 
   if (Pkg.CurrentVer().end())
     return;
+
+  // to avoid endless recursion/crashes, check if this package has already been
+  // visited for this purpose (the container has to be empty at the start of
+  // each run)
+  auto it = std::find(unused_already_visited.begin(), unused_already_visited.end(), Pkg->ID);
+  if (it == std::end(unused_already_visited))
+    {
+      // not previously visited, register
+      unused_already_visited.push_back(Pkg->ID);
+    }
+  else
+    {
+      // already visited
+      return;
+    }
 
   // from now and for the remaining of this function, these are "unused
   // deletes", so set variable accordingly
@@ -1326,7 +1350,7 @@ void aptitudeDepCache::internal_mark_delete(const PkgIterator &Pkg,
 
 	      // if we reach here, can delete the real package providing the
 	      // dependency
-	      internal_mark_delete(dep_prv.OwnerPkg(), Purge, unused_delete);
+	      internal_mark_delete(dep_prv.OwnerPkg(), Purge, unused_delete, unused_already_visited);
 	    }
 
 	  // it was a virtual package -- so stop processing the considered
@@ -1356,7 +1380,7 @@ void aptitudeDepCache::internal_mark_delete(const PkgIterator &Pkg,
 	    continue;
 	  }
 
-	  internal_mark_delete(dep_pkg, Purge, unused_delete);
+	  internal_mark_delete(dep_pkg, Purge, unused_delete, unused_already_visited);
 	}
     }
 }
